# hash-gui

./: .gitignore  Cargo.toml
.github/workflows/: build.yml
assets/: Info.plist
src/: main.rs  prelude.rs
