[package]
name = "hash-gui"
description = "My HashTab"
authors = ["Satoru Sukawa <sukawasatoru.github@outlook.jp>"]
edition = "2024"

[dependencies]
anyhow = "=1.0.101"
bytes = "=1.11.1"
iced = { version = "=0.13.1", features = ["auto-detect-theme", "tokio"] }
sha2 = "=0.10.9"
tokio = { version = "=1.49.0", features = ["rt-multi-thread"] }
tracing = "=0.1.44"
tracing-subscriber = "=0.3.22"

[profile.release-opt]
inherits = "release"
codegen-units = 1
debug = false
lto = true
incremental = false
opt-level = 3
overflow-checks = false
strip = "debuginfo"
